--- a/Data_Visualizations3.ipynb
+++ b/Data_Visualizations3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Data_Visualizations3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMOnl7w3Tf5D5wdYr2sRqB0",
+      "authorship_tag": "ABX9TyO9bwJIQPlSq9kI79ntlxHR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 153
         },
-        "outputId": "2997d43c-1514-416f-f4d9-7ab071667258"
+        "outputId": "cb69bb09-48d0-45ca-fcb8-4f73bd136486"
       },
       "source": [
         "#This program is to plot the total sales per month for the year 2011\n",
@@ -55,7 +55,7 @@
         "#Print the data frame with the Quantity column in ascending order\n",
         "print(groupby_sum1.sort_values('Quantity', ascending=True))"
       ],
-      "execution_count": 5,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "stream",
@@ -88,7 +88,10 @@
         "#This program is to use the data frame above and plot sales per month as a Bar Chart\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
+        "#The data frame was grouped by month and plotted against the amount as bar chart\n",
         "groupby_sum1.groupby('Month').sum().plot(y='Amount', kind='bar')\n",
+        "\n",
+        "#Print the bar graph\n",
         "plt.show()"
       ],
       "execution_count": 2,
@@ -122,6 +125,7 @@
         "#This program is to create a pie chart by country using the data frame above\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
+        "#The original data fram was grouped by country and pltted against the amount as a pie chart\n",
         "df.groupby('Country').sum().plot(y='Amount', kind='pie')\n",
         "\n",
         "#I moved the pie chart legend so it would not overlap the pie chart\n",
@@ -161,6 +165,7 @@
         "#I did not like the pie chart visulaization so I changed it to a horizontal bar chart\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
+        "#The original data frame was grouped by country against the amount as a horizontal bar chart\n",
         "df.groupby('Country').sum().plot(y='Amount', kind='barh')\n",
         "\n",
         "#I increased the bar chart size for better visability\n",
